apps/servicex/servicex-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicex-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - servicex.cb-interview.com
    port:
      name: http
      number: 80
      protocol: HTTP
