apps/servicex/servicex-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicex-vs
  namespace: servicex
spec:
  hosts:
  - servicex.cb-interview.com
  gateways:
  - servicex-gateway
  http:
  - route:
    - destination:
        host: servicex-deployment.servicex.svc.cluster.local
        port:
          number: 8080
